--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,12 +3,15 @@
       <img alt="ParkinsonTestCenter" class="smaller" src="assets/images/logo.svg">
     </a>
     <div class="main-nav">
-      <div *ngIf="!loggedUser">
-        <a>Zalogowany</a>
-      </div>
       <div *ngIf="loggedUser">
-        <button mat-button>Logowanie</button>
-        <button mat-raised-button>Rejestracja</button>
+        <button mat-button inline=true (click)="logout()">
+          Wyloguj
+          <mat-icon>logout</mat-icon>
+        </button>
+      </div>
+      <div *ngIf="!loggedUser">
+        <button mat-button (click)="login()">Logowanie</button>
+        <button mat-raised-button (click)="register()">Rejestracja</button>
       </div>
     </div>
 </mat-toolbar>
