--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -11,10 +11,11 @@
   background-color: $white;
   @include default-shadow();
   display: flex;
-  padding: 15px;
   justify-content: space-between;
   align-items: center;
   position: relative;
+  padding-left: $padding-m;
+  padding-right: $padding-m;
 
   .main-nav {
     display: flex;
@@ -24,6 +25,12 @@
   .logo {
     position: relative;
     display: block;
+  }
+
+  .mat-icon {
+    font-size: 20px;
+    color: $blue;
+    margin-right: $margin-s;
   }
 }
 
