login and register

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,13 +3,13 @@
       <img alt="ParkinsonTestCenter" class="smaller" src="assets/images/logo.svg">
     </a>
     <div class="main-nav">
-      <div *ngIf="loggedUser">
+      <div *ngIf="!!(token$ | async)">
         <button mat-button inline=true (click)="logout()">
           Wyloguj
           <mat-icon>logout</mat-icon>
         </button>
       </div>
-      <div *ngIf="!loggedUser">
+      <div *ngIf="!(token$ | async)">
         <button mat-button (click)="login()">Logowanie</button>
         <button mat-raised-button (click)="register()">Rejestracja</button>
       </div>
