--- a/src/app/modules/doctor/pages/browser-patient/browser-patient.component.html
+++ b/src/app/modules/doctor/pages/browser-patient/browser-patient.component.html
@@ -8,7 +8,7 @@
       <mat-icon class="search-icon">search</mat-icon>
     </div>
 
-    <button mat-raised-button>
+    <button mat-raised-button (click)="addNewPatient()">
       Dodaj nowego pacjenta
       <mat-icon class="add-icon">add_circle</mat-icon>
     </button>
