--- a/src/app/modules/doctor/pages/patient-details/patient-details.component.html
+++ b/src/app/modules/doctor/pages/patient-details/patient-details.component.html
@@ -1,8 +1,34 @@
 <div class="patient-details-container">
-  <div class="patient-details-sidenav">
-    AA
+  <div class="patient-details-sidenav mat-elevation-z8">
+    <h4 class="name">{{name}}</h4>
+    <button mat-button class="menu-button">
+      <mat-icon>person</mat-icon>
+      <span class="button-span">Edycja pacjenta</span>
+    </button>
+
+    <mat-divider></mat-divider>
+
+    <button mat-button class="menu-button">
+      <mat-icon>home</mat-icon>
+      <span>Wyniki testów</span>
+    </button>
+
+    <mat-divider></mat-divider>
+
+    <button mat-button class="menu-button">
+      <mat-icon>info</mat-icon>
+      <span>Analiza testów</span>
+    </button>
+
+
   </div>
   <div class="patient-details-main-window">
-    AAa
+    <div class="content mat-elevation-z8">
+      <button class="back-button">
+        <mat-icon class="back-icon">arrow_back_ios</mat-icon>
+        <span>Powrót</span>
+      </button>
+      Main content here!
+    </div>
   </div>
 </div>
