--- a/src/app/modules/shared/pages/login-page/login-page.component.html
+++ b/src/app/modules/shared/pages/login-page/login-page.component.html
@@ -3,25 +3,25 @@
   <p class="info-form">Podaj dane potrzene do logowania:</p>
   <div class="container-form-group">
 
-    <form [formGroup]="loginFormGroup">
+    <form [formGroup]="loginFormGroup" (ngSubmit)="submitForm()">
       <div class="form-fields">
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
-          <input matInput placeholder="Email" required>
-          <!--          <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>-->
+          <input matInput placeholder="Email" formControlName="email"  required>
+          <mat-error *ngIf="!isControlValid('email')">{{getErrorMessage('email')}}</mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Hasło</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" required>
+          <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
-          <!--          <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>-->
+          <mat-error *ngIf="!isControlValid('password')">{{getErrorMessage('password')}}</mat-error>
         </mat-form-field>
       </div>
+
+      <button mat-raised-button>Zaloguj się</button>
     </form>
   </div>
-
-  <button mat-raised-button>Zaloguj się</button>
 </div>
