--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -25,7 +25,7 @@ button.mat-mdc-button {
 .mat-card-default {
   margin-top: $margin-xl;
   width: 500px;
-  height: 600px;
+  height: 650px;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -59,5 +59,6 @@ form {
 
 .container-form-group mat-form-field {
   width: 100%;
+  margin-top: $margin-s;
 }
 
