browser-patient add

--- a/src/app/modules/doctor/pages/browser-patient/browser-patient.component.html
+++ b/src/app/modules/doctor/pages/browser-patient/browser-patient.component.html
@@ -15,22 +15,22 @@
   </div>
 
   <div class="table">
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <mat-table [dataSource]="patients" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="position" sticky>
-        <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
-      </ng-container>
+<!--      <ng-container matColumnDef="position" sticky>-->
+<!--        <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>-->
+<!--        <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>-->
+<!--      </ng-container>-->
 
       <ng-container matColumnDef="fullName">
         <mat-header-cell *matHeaderCellDef> Imię i nazwisko </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.fullName}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.name+ " " + element.surname}} </mat-cell>
       </ng-container>
 
-      <ng-container matColumnDef="email">
-        <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.email}} </mat-cell>
-      </ng-container>
+<!--      <ng-container matColumnDef="email">-->
+<!--        <mat-header-cell *matHeaderCellDef> Nazwisko </mat-header-cell>-->
+<!--        <mat-cell *matCellDef="let element"> {{element.surname}} </mat-cell>-->
+<!--      </ng-container>-->
 
       <ng-container matColumnDef="patientTests">
         <mat-header-cell *matHeaderCellDef> Testy </mat-header-cell>
