--- a/src/assets/styles/_styles.scss
+++ b/src/assets/styles/_styles.scss
@@ -62,3 +62,15 @@ form {
   margin-top: $margin-s;
 }
 
+.card-position {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button-position {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
