--- a/src/app/modules/doctor/pages/patient-details/patient-details.component.scss
+++ b/src/app/modules/doctor/pages/patient-details/patient-details.component.scss
@@ -2,14 +2,14 @@
 
 .patient-details-container {
   width: 100%;
-  height: calc(100vh - 65px);
+  min-height: calc(100vh - 65px);
   display: flex;
   flex-direction: row;
 }
 
 .patient-details-sidenav {
   margin: 16px;
-  width: 20%;
+  width: 15%;
   border-right: none;
   background: #002b5c;
   color: white;
@@ -19,22 +19,22 @@
 }
 
 .patient-details-main-window {
-  height: calc(100vh - 65px);
+  min-height: calc(100vh - 65px);
   width: 80%;
 }
 
 .content {
-  height: calc(100vh - 98px);
+  min-height: calc(100vh - 65px);
   border-radius: 10px;
   margin: 16px;
-  margin-left: 32px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+  padding: $padding-xl;
+  //display: flex;
+  //justify-content: center;
+  //align-items: center;
+  flex-direction: column;
   font-size: 2rem;
   color: lightgray;
+  align-items: flex-start;
 }
 .menu-button {
   width: 100%;
@@ -56,6 +56,9 @@
   background: none;
   border: none;
   font-size: $font-size-l;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
   @include rubik-medium();
 }
 
