--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -5,6 +5,8 @@ $rock-blue: #9fadc9;
 $mercury: #e6e6e6;
 $alabaster: #f8f8f8;
 $white: #ffffff;
+$gray-dark: #A9A9A9;
+$gray-light: #DCDCDC;
 
 $color-shadow: rgba(0, 0, 0 , .2)
 
