PD-5 Preparation of data models

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,12 @@
   /*justify-content: center;*/
   width: 100%;
 }
+
+.spinner {
+  position: fixed;
+  margin: auto;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
