--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,27 @@
 <mat-toolbar class="header">
     <a class="logo">
-      <img alt="ParkinsonTestCenter" class="smaller" src="assets/images/logo.svg">
+      <img alt="ParkinsonTestCenter" class="smaller" src="../../../assets/images/logo.svg">
     </a>
     <div class="main-nav">
-      <div *ngIf="!!(token$ | async)">
-        <button mat-button inline=true (click)="logout()">
-          Wyloguj
-          <mat-icon>logout</mat-icon>
-        </button>
+      <div class="hello-banner" *ngIf="!!(token$ | async)">
+        <span>Witaj, {{user.name}}!</span>
+        <button class="circle" [matMenuTriggerFor]="infoMenu">{{this.logoUser}}</button>
+        <mat-menu #infoMenu="matMenu" xPosition="before">
+          <button mat-menu-item>
+            <mat-icon>person</mat-icon>
+            <span class="menu-text">Informacje</span>
+          </button>
+          <button mat-menu-item (click)="logout()">
+            <mat-icon>logout</mat-icon>
+            <span class="menu-text">Wyloguj się</span>
+          </button>
+        </mat-menu>
       </div>
-      <div *ngIf="!(token$ | async)">
-        <button mat-button (click)="login()">Logowanie</button>
+
+      <div class="header-button" *ngIf="!(token$ | async)">
+        <button mat-button (click)="login()"  class="no-hover-effect">Logowanie</button>
         <button mat-raised-button (click)="register()">Rejestracja</button>
       </div>
+
     </div>
 </mat-toolbar>
