--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,21 +1,22 @@
-@import "src/assets/styles/styles";
+@import "../../../assets/styles/styles";
 
 .mat-toolbar {
-  padding: 0;
+  padding: $padding-0;
   height: 80px;
 }
 
 .header {
-  width: 100%;
-  top: 0;
-  background-color: $white;
-  @include default-shadow();
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: relative;
+  width: 100%;
+  top: 0;
+  background-color: $white;
   padding-left: $padding-m;
   padding-right: $padding-m;
+
+  @include default-shadow();
 
   .main-nav {
     display: flex;
@@ -34,11 +35,53 @@
   }
 }
 
+.header-button {
+  border: $blue;
+  border-radius: $border-radius-s;
+  border-style: solid;
+  border-width: thin;
+}
+
+button.mat-mdc-button {
+  width: 200px;
+  border-radius: $border-radius-s;
+  --mat-mdc-button-persistent-ripple-color: #2B255A;
+}
+
 button.mat-mdc-raised-button {
   width: 200px;
-  margin-left: $margin-m;
+  border-radius: $border-radius-s;
+  --mat-mdc-button-persistent-ripple-color: white;
 }
 
 img{
   height: 64px;
+}
+
+.hello-banner {
+  display: flex;
+  align-items: center;
+}
+
+.circle {
+  width: 48px;
+  height: 48px;
+  line-height: 48px;
+  border-radius: 50%;
+  border: none;
+  font-size: $font-size-m;
+  color: $white;
+  text-align: center;
+  background: $blue;
+  margin-left: $margin-s;
+  cursor: pointer;
+}
+
+.mat-mdc-menu-item  {
+  color: $blue;
+}
+
+.menu-text {
+  color: $blue;
+  font-style: normal;
 }
