--- a/src/app/modules/shared/pages/login-page/login-page.component.html
+++ b/src/app/modules/shared/pages/login-page/login-page.component.html
@@ -15,14 +15,14 @@
           <mat-form-field appearance="outline">
             <mat-label>Hasło</mat-label>
             <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <button type="button" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             <mat-error *ngIf="!isControlValid('password')">{{getErrorMessage('password')}}</mat-error>
           </mat-form-field>
         </div>
         <div class="button-position">
-          <button mat-raised-button>Zaloguj się</button>
+          <button mat-raised-button type="submit">Zaloguj się</button>
         </div>
       </form>
     </div>
