--- a/src/app/modules/shared/pages/register-page/register-page.component.html
+++ b/src/app/modules/shared/pages/register-page/register-page.component.html
@@ -27,7 +27,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Hasło</mat-label>
             <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" required>
-            <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+            <button mat-icon-button type="button" matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
               <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             <mat-error *ngIf="!isControlValid('password')">{{getErrorMessage('password')}}</mat-error>
@@ -36,7 +36,7 @@
           <mat-form-field appearance="outline">
             <mat-label>Powtórz hasło</mat-label>
             <input matInput [type]="hidePasswordConfirmation ? 'password' : 'text'"  formControlName="passwordConfirmation" required>
-            <button mat-icon-button matSuffix (click)="hidePasswordConfirmation = !hidePasswordConfirmation" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePasswordConfirmation">
+            <button mat-icon-button type="button" matSuffix (click)="hidePasswordConfirmation = !hidePasswordConfirmation" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePasswordConfirmation">
               <mat-icon>{{hidePasswordConfirmation ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             <mat-error *ngIf="!isControlValid('passwordConfirmation')">{{getErrorMessage('passwordConfirmation')}}</mat-error>
