--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,6 +3,7 @@ $margin-m: 16px;
 $margin-l: 24px;
 $margin-xl: 32px;
 
+$padding-0: 0;
 $padding-s: 12px;
 $padding-m: 16px;
 $padding-l: 24px;
@@ -14,3 +15,5 @@ $font-size-m: 16px;
 $font-size-l: 18px;
 $font-size-xl: 24px;
 $font-size-h2: 40px;
+
+$border-radius-s: 10px
