PD-15 add new patient

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,20 +3,20 @@
       <img alt="ParkinsonTestCenter" class="smaller" src="../../../assets/images/logo.svg">
     </a>
     <div class="main-nav">
-      <div class="hello-banner" *ngIf="!!(token$ | async)">
-        <span>Witaj, {{user.name}}!</span>
-        <button class="circle" [matMenuTriggerFor]="infoMenu">{{this.logoUser}}</button>
-        <mat-menu #infoMenu="matMenu" xPosition="before">
-          <button mat-menu-item>
-            <mat-icon>person</mat-icon>
-            <span class="menu-text">Informacje</span>
-          </button>
-          <button mat-menu-item (click)="logout()">
-            <mat-icon>logout</mat-icon>
-            <span class="menu-text">Wyloguj się</span>
-          </button>
-        </mat-menu>
-      </div>
+<!--      <div class="hello-banner" *ngIf="!!(token$ | async)">-->
+<!--        <span>Witaj, {{user.name}}!</span>-->
+<!--        <button class="circle" [matMenuTriggerFor]="infoMenu">{{this.logoUser}}</button>-->
+<!--        <mat-menu #infoMenu="matMenu" xPosition="before">-->
+<!--          <button mat-menu-item>-->
+<!--            <mat-icon>person</mat-icon>-->
+<!--            <span class="menu-text">Informacje</span>-->
+<!--          </button>-->
+<!--          <button mat-menu-item (click)="logout()">-->
+<!--            <mat-icon>logout</mat-icon>-->
+<!--            <span class="menu-text">Wyloguj się</span>-->
+<!--          </button>-->
+<!--        </mat-menu>-->
+<!--      </div>-->
 
       <div class="header-button" *ngIf="!(token$ | async)">
         <button mat-button (click)="login()"  class="no-hover-effect">Logowanie</button>
