--- a/src/app/modules/doctor/pages/add-new-patient/add-new-patient.component.scss
+++ b/src/app/modules/doctor/pages/add-new-patient/add-new-patient.component.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: $padding-xl;
+  padding: $padding-l $padding-xl;
   justify-content: center;
 }
 
@@ -14,9 +14,6 @@ button.mat-mdc-raised-button {
   height: 50px;
   border-radius: 20px;
   font-size: $font-size-l;
-  margin-left: $margin-m;
-  margin-top: $margin-l;
-
   @include rubik-medium()
 }
 
@@ -24,7 +21,6 @@ button.mat-mdc-raised-button {
   font-size: $font-size-xl;
   color: $blue;
   margin: 0;
-  margin-bottom: $margin-l;
   @include roboto-bold
 }
 
@@ -57,4 +53,8 @@ button.mat-mdc-button {
 ul {
   list-style-type: none;
   margin-top: 4px;
+}
+
+.mat-mdc-icon-button {
+  color: $blue;
 }
