--- a/src/app/modules/doctor/pages/remove-patient/remove-patient.component.scss
+++ b/src/app/modules/doctor/pages/remove-patient/remove-patient.component.scss
@@ -1,18 +1,27 @@
 @import "src/assets/styles/styles";
 
-.patient-info-box{
+.remove-patient-dialog {
+  width: 600px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: $padding-l $padding-xl;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
-.title-patient-form {
+.title-patient-form{
   font-size: $font-size-xl;
   color: $blue;
-  margin-bottom: $margin-l;
+  margin: 0;
   @include roboto-bold
+}
+
+
+.button-position {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 button.mat-mdc-raised-button {
@@ -30,37 +39,4 @@ button.mat-mdc-raised-button.mat-warn {
   border-radius: 20px;
   font-size: $font-size-l;
   @include rubik-medium()
-}
-
-button.mat-mdc-button {
-  width: 150px;
-  height: 40px;
-  border-radius: 20px;
-  font-size: $font-size-m;
-
-  @include rubik-regular()
-}
-
-.example-section {
-  margin: 12px 0;
-}
-
-.example-margin {
-  margin: 0 12px;
-}
-
-ul {
-  list-style-type: none;
-  margin-top: 4px;
-}
-
-.mat-mdc-icon-button {
-  color: $blue;
-}
-
-.button-position {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: $margin-l;
 }
