--- a/src/app/modules/doctor/pages/patient-details/patient-details.component.scss
+++ b/src/app/modules/doctor/pages/patient-details/patient-details.component.scss
@@ -29,8 +29,8 @@
   margin: 16px;
   padding: $padding-xl;
   flex-direction: column;
-  color: lightgray;
   align-items: flex-start;
+  color: $blue;
 }
 .menu-button {
   width: 100%;
@@ -91,12 +91,6 @@ button.mat-mdc-button {
   border-radius: 10px;
   margin-top: $margin-l;
 }
-
-//.mat-icon {
-//  font-size: 20px;
-//  color: $white;
-//  margin: $margin-m;
-//}
 
 mat-divider {
   margin-top: 16px;
