--- a/src/app/modules/doctor/pages/patient-results/patient-results.component.html
+++ b/src/app/modules/doctor/pages/patient-results/patient-results.component.html
@@ -6,9 +6,9 @@
         <mat-form-field appearance="outline">
           <mat-label>Rodzaj testu</mat-label>
           <mat-select [(ngModel)]="selectedTest" name="test">
-            <mat-option *ngFor="let test of selectedPatient.patientTests" [value]="test.uid">
-              {{test.name_pl}}
-            </mat-option>
+<!--            <mat-option *ngFor="let test of selectedPatient.patientTests" [value]="test.uid">-->
+<!--              {{test.name_pl}}-->
+<!--            </mat-option>-->
           </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline">
