--- a/src/app/modules/doctor/pages/add-new-patient/components/new-patient-summary/new-patient-summary.component.scss
+++ b/src/app/modules/doctor/pages/add-new-patient/components/new-patient-summary/new-patient-summary.component.scss
@@ -74,3 +74,8 @@ mat-stepper.mat-step-icon-state-edit {
 ::ng-deep::ng-deep .mat-horizontal-stepper-header{
   pointer-events: none !important;
 }
+
+.control-group {
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
