patient details pages

--- a/src/app/modules/doctor/pages/patient-details_remove/patient-details.component.html
+++ b/src/app/modules/doctor/pages/patient-details_remove/patient-details.component.html
@@ -3,7 +3,7 @@
     <h4 class="name">{{selectedPatient.name + " " + selectedPatient.surname}}</h4>
     <button mat-button class="menu-button" (click)="navigateToEdit()">
       <mat-icon>person</mat-icon>
-      <span class="button-span">Edycja pacjenta</span>
+      <span class="button-span">Informacje</span>
     </button>
 
     <mat-divider></mat-divider>
