--- a/src/app/modules/doctor/pages/patient-details/information/information.component.scss
+++ b/src/app/modules/doctor/pages/patient-details/information/information.component.scss
@@ -1,18 +1,25 @@
 @import "src/assets/styles/styles";
 
-.patient-info-box{
+.info-box{
   display: flex;
   flex-direction: column;
-  align-items: center;
   padding: $padding-l $padding-xl;
   justify-content: center;
 }
 
-.title-patient-form {
+.title {
   font-size: $font-size-xl;
   color: $blue;
   margin-bottom: $margin-l;
+  align-self: center;
   @include roboto-bold
+}
+
+.button-position {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
 button.mat-mdc-raised-button {
@@ -32,35 +39,3 @@ button.mat-mdc-raised-button.mat-warn {
   @include rubik-medium()
 }
 
-button.mat-mdc-button {
-  width: 150px;
-  height: 40px;
-  border-radius: 20px;
-  font-size: $font-size-m;
-
-  @include rubik-regular()
-}
-
-.example-section {
-  margin: 12px 0;
-}
-
-.example-margin {
-  margin: 0 12px;
-}
-
-ul {
-  list-style-type: none;
-  margin-top: 4px;
-}
-
-.mat-mdc-icon-button {
-  color: $blue;
-}
-
-.button-position {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: $margin-l;
-}
