patient details pages - histogram

--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/analysis-finger-tapping.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/analysis-finger-tapping.component.html
@@ -19,7 +19,7 @@
         Histogramy
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
+    <app-histogram [histogramData]="histogramData" ></app-histogram>
   </mat-expansion-panel>
 
   <mat-expansion-panel (opened)="panelOpenState = true"
