--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/patient-analysis.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/patient-analysis.component.html
@@ -32,7 +32,7 @@
     <div class="show-results" *ngIf="showTable">
       <p class="results-info">Wyniki analizy testów:</p>
       <div *ngIf="selectedTest ==='STATIC_TEST'">
-        <app-analysis-finger-tapping [tableData] = "tableData"></app-analysis-finger-tapping>
+        <app-analysis-finger-tapping [tableData] = "tableData" [histogramData]="histogramData"></app-analysis-finger-tapping>
       </div>
     </div>
     <div *ngIf="!showTable">
