patient details pages - boxplot

--- a/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/analysis-finger-tapping.component.html
+++ b/src/app/modules/doctor/pages/patient-details/analysis/patient-analysis/analysis-finger-tapping/analysis-finger-tapping.component.html
@@ -29,7 +29,7 @@
         Wykresy pudełkowe
       </mat-panel-title>
     </mat-expansion-panel-header>
-    <p>This is the primary content of the panel.</p>
+    <app-box-plot [data]="histogramData"></app-box-plot>
   </mat-expansion-panel>
 
   <mat-expansion-panel (opened)="panelOpenState = true"
